Correct buildings vertical misalignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,7 +18,7 @@
   object-fit: cover;
   position: relative;
   width: 2160px;
-  height: 95vh;
+  height: 1230px;
   background-size: cover;
   background-image: url('~src/assets/Village/city_blank.jpg');
 }
